# python-plugwise

./: .bandit  .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  .travis.yml.disabled  .yamllint  CHANGELOG.md  CODEOWNERS  LICENSE  README.md  SECURITY.md  TODO.md  biome.json  mypy.ini  package.json  package_constraints.txt  pre-commit.sh  pylintrc  pyproject.toml  pytest.ini  renovate.json  requirements.txt  requirements_commit.txt  requirements_test.txt  run_tests_and_coverage.sh  setup.cfg  setup.py  t
.github/: dependabot.yml  release.yml  renovate.json
.github/ISSUE_TEMPLATE/: bug.yml  bug_report.md  config.yml  feature_request.md  feature_request.yml  todo_item.yml
.github/workflows/: codeql-analysis.yml  merge.yml  publish-to-test-pypi.yml  python.yml  verify.yml
fixtures/adam_anna_new_2/: data.json
fixtures/adam_bad_thermostat/: data.json
fixtures/adam_g_o/: all_data.json
fixtures/adam_heatpump_cooling/: all_data.json  data.json  device_list.json
fixtures/adam_jip/: all_data.json  data.json  device_list.json
fixtures/adam_multiple_devices_per_zone/: all_data.json  data.json  device_list.json
fixtures/adam_onoff_cooling_fake_firmware/: all_data.json  data.json  device_list.json
fixtures/adam_plus_anna/: all_data.json  data.json  device_list.json  notifications.json
fixtures/adam_plus_anna_copy_with_error_domain_added/: all_data.json  device_list.json  notifications.json
fixtures/adam_plus_anna_new/: all_data.json  data.json  device_list.json
fixtures/adam_plus_anna_new_regulation_off/: all_data.json  data.json
fixtures/adam_zone_per_device/: all_data.json  data.json
fixtures/anna_elga_2/: all_data.json  data.json
fixtures/anna_elga_2_cooling/: all_data.json  data.json
fixtures/anna_elga_2_schedule_off/: all_data.json  data.json  device_list.json
fixtures/anna_elga_no_cooling/: all_data.json  data.json
fixtures/anna_heatpump_cooling/: all_data.json  data.json
fixtures/anna_heatpump_cooling_fake_firmware/: all_data.json  data.json
fixtures/anna_heatpump_heating/: all_data.json  data.json
fixtures/anna_loria_cooling_active/: all_data.json  data.json
fixtures/anna_loria_driessens/: all_data.json  data.json  device_list.json
fixtures/anna_loria_heating_idle/: all_data.json  data.json  device_list.json
fixtures/anna_p1/: data.json
fixtures/anna_v4/: all_data.json  data.json  device_list.json
fixtures/anna_v4_dhw/: all_data.json  data.json
fixtures/anna_v4_no_modules/: data.json
fixtures/anna_v4_no_tag/: all_data.json  data.json
fixtures/anna_without_boiler_fw3/: all_data.json  device_list.json
fixtures/anna_without_boiler_fw4/: all_data.json
fixtures/anna_without_boiler_fw42/: all_data.json
fixtures/anna_without_boiler_fw441/: all_data.json  data.json
fixtures/legacy_anna/: all_data.json  data.json  device_list.json
fixtures/legacy_anna_2/: all_data.json  data.json  device_list.json
fixtures/m_adam_cooling/: all_data.json  data.json
fixtures/m_adam_heating/: all_data.json  data.json
fixtures/m_adam_heating_off_schedule/: data.json
fixtures/m_adam_jip/: all_data.json  data.json
fixtures/m_adam_multiple_devices_per_zone/: all_data.json  data.json
fixtures/m_anna_heatpump_cooling/: all_data.json  data.json
fixtures/m_anna_heatpump_idle/: all_data.json  data.json
fixtures/p1v3/: all_data.json
fixtures/p1v3_full_option/: all_data.json
fixtures/p1v3solarfake/: all_data.json
fixtures/p1v4/: all_data.json
fixtures/p1v4_442_single/: all_data.json  data.json  device_list.json
fixtures/p1v4_442_triple/: all_data.json  data.json
fixtures/smile_p1_v2/: all_data.json  device_list.json
fixtures/smile_p1_v2_2/: all_data.json  data.json  device_list.json
fixtures/stretch_v23/: all_data.json  data.json  device_list.json
fixtures/stretch_v27_no_domain/: all_data.json  data.json  device_list.json
fixtures/stretch_v31/: all_data.json  data.json
patch/: aiohttp310.patch
plugwise/: .helper.py.swp  DEPENDENCIES.md  SHARED.md  __init__.py  common.py  constants.py  controller.py  data.py  data_legacy.py  device_classes.py  devices.py  entities.py  exceptions.py  helper.py  helpers.py  message.py  model.py  models.py  node.py  node.py.rej  parser.py  smile.py  smile_actual.py  smile_legacy.py  smilecomm.py  stick.py  stick.py.orig  util.py
plugwise/connections/: __init__.py  connection.py  serial.py  socket.py
plugwise/legacy/: data.py  helper.py  smile.py
plugwise/messages/: __init__.py  requests.py  responses.py
plugwise/nodes/: __init__.py  circle.py  circle_plus.py  energy.py  scan.py  sed.py  sense.py  stealth.py  switch.py
plugwise/smile/: constants.py  helper.py  util.py
plugwise/stick/: __init__.py  constants.py  exceptions.py  parser.py  util.py
scripts/: complexity.sh  dependencies_check.sh  fake_fixtures.py  manual_fixtures.py  pre-commit.sh  python-venv.sh  run-in-env.sh  setup.sh  setup_test.sh  tests_and_coverage.sh  update_fixtures.sh
tests/: INIT.md  README.md  __init__.py  bandit.yaml  requirements.txt  test_adam.py  test_anna.py  test_combined.py  test_generic.py  test_init.py  test_legacy_anna.py  test_legacy_generic.py  test_legacy_p1.py  test_legacy_stretch.py  test_p1.py  test_smile.py  test_stick.py  test_stretch.py
tests/adam_living_floor_plus_3_rooms/: core.direct_objects.xml  core.domain_objects.xml  core.locations.xml
tests/adam_multiple_devices_per_zone/: core.direct_objects.xml  core.domain_objects.xml  core.modules.xml
tests/adam_plus_anna/: core.direct_objects.xml  core.locations.xml
tests/adam_plus_anna_copy_with_error_domain_added/: core.domain_objects.xml  core.modules.xml
tests/adam_zone_per_device/: core.modules.xml
tests/anna_heatpump/: core.appliances.xml  core.direct_objects.xml  core.domain_objects.xml
tests/anna_heatpump_cooling/: core.domain_objects.xml
tests/anna_v4/: core.domain_objects.xml
tests/anna_without_boiler_fw4/: core.appliances.xml  core.domain_objects.xml
tests/faulty_stretch/: core.modules.xml
tests/legacy_anna/: core.appliances.xml  core.locations.xml  (+3 more)
userdata/: README.md  renumber.sh
(+297 files in other folders)
