# Setuptools v62.3 doesn't support editable installs with just 'pyproject.toml' (PEP 660).
# Codespell v2.2.4 doesn't support pyproject.toml (using tomli) for python3.11
# Keep this file until it does!

[metadata]
url = https://github.com/plugwise/python-plugwise

[codespell]
ignore-words-list = hass,alot,datas,dof,dur,ether,farenheit,hist,iff,iif,ines,ist,lightsensor,mut,nd,pres,referer,rime,ser,serie,te,technik,ue,uint,visability,wan,wanna,withing,iam,incomfort,ba,haa,pullrequests,leeg
skip = ./.*,*.csv,*.json
quiet-level = 2
