# Setuptools v62.3 doesn't support editable installs with just 'pyproject.toml' (PEP 660).
# Added Codespell since pre-commit doesn't process args correctly (and python3.11 and toml prevent using pyproject.toml)
# Keep this file until it does!

[metadata]
url = https://github.com/plugwise/python-plugwise

[codespell]
# Most of the ignores from HA-Core upstream
# Self-added: leeg
ignore-words-list = alot,ba,datas,dof,dur,ether,farenheit,haa,hass,hist,iam,iff,iif,incomfort,ines,ist,leeg,lightsensor,mut,nd,pres,pullrequests,referer,rime,ser,serie,te,technik,ue,uint,visability,wan,wanna,withing,
skip = ./.*,*.csv,*.json
quiet-level = 2
